--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     },
     "dependencies": {
         "react": "17.0.2",
-        "react-dom": "17.0.2"
+        "react-dom": "17.0.2",
+        "react-hook-form": "7.27.1",
+        "react-router-dom": "6.2.1",
+        "react-toastify": "8.2.0"
     },
     "devDependencies": {
         "@types/react": "17.0.39",
         "@types/react-dom": "17.0.11",
-        "@vitejs/plugin-react": "1.2.0",
         "eslint": "8.9.0",
         "eslint-plugin-react": "7.29.0",
         "eslint-plugin-jsx-a11y": "6.5.1",
@@ -33,7 +35,10 @@
         "postcss": "8.4.7",
         "autoprefixer": "10.4.2",
         "tailwindcss": "3.0.23",
+        "@tailwindcss/forms": "0.4.0",
         "typescript": "4.5.5",
-        "vite": "2.8.4"
+        "vite": "2.8.4",
+        "@vitejs/plugin-react": "1.2.0",
+        "vite-tsconfig-paths": "3.4.1"
     }
 }
