--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,9 @@
         "resolveJsonModule": true,
         "isolatedModules": true,
         "noEmit": true,
-        "jsx": "react-jsx"
+        "jsx": "react-jsx",
+        "baseUrl": "./src",
+        "paths": { "@components/*": ["components/*"], "@lib/*": ["lib/*"] }
     },
     "include": ["src"],
     "references": [{ "path": "./tsconfig.node.json" }]
