--- a/package.json
+++ b/package.json
@@ -11,34 +11,39 @@
         "dev": "vite",
         "build": "tsc && vite build",
         "preview": "vite preview",
-        "lint": "tsc --noEmit && eslint '*/**/*.{js,ts,tsx}' --quiet"
+        "lint": "tsc --noEmit && eslint 'src/**/*.{js,ts,tsx}' --quiet"
     },
     "dependencies": {
-        "react": "17.0.2",
-        "react-dom": "17.0.2",
-        "react-hook-form": "7.27.1",
-        "react-router-dom": "6.2.1",
-        "react-toastify": "8.2.0"
+        "react": "18.1.0",
+        "react-dom": "18.1.0",
+        "react-hook-form": "7.31.1",
+        "react-router-dom": "6.3.0",
+        "@mantine/core": "4.2.4",
+        "@mantine/hooks": "4.2.4",
+        "@mantine/notifications": "4.2.4",
+        "@heroicons/react": "1.0.6",
+        "swr": "1.3.0",
+        "qs": "6.10.3"
     },
     "devDependencies": {
-        "@types/react": "17.0.39",
-        "@types/react-dom": "17.0.11",
-        "eslint": "8.10.0",
-        "eslint-plugin-react": "7.29.2",
+        "vite": "2.9.9",
+        "@vitejs/plugin-react": "1.3.2",
+        "vite-tsconfig-paths": "3.4.1",
+        "@types/react": "18.0.9",
+        "@types/react-dom": "18.0.3",
+        "@types/qs": "6.9.7",
+        "eslint": "8.15.0",
+        "eslint-plugin-react": "7.29.4",
         "eslint-plugin-jsx-a11y": "6.5.1",
-        "eslint-plugin-react-hooks": "4.3.0",
-        "eslint-plugin-import": "2.25.4",
-        "@typescript-eslint/eslint-plugin": "5.12.1",
-        "@typescript-eslint/parser": "5.12.1",
-        "prettier": "2.5.1",
-        "prettier-plugin-tailwindcss": "0.1.8",
-        "postcss": "8.4.7",
-        "autoprefixer": "10.4.2",
-        "tailwindcss": "3.0.23",
-        "@tailwindcss/forms": "0.4.0",
-        "typescript": "4.5.5",
-        "vite": "2.8.4",
-        "@vitejs/plugin-react": "1.2.0",
-        "vite-tsconfig-paths": "3.4.1"
+        "eslint-plugin-react-hooks": "4.5.0",
+        "eslint-plugin-import": "2.26.0",
+        "@typescript-eslint/eslint-plugin": "5.23.0",
+        "@typescript-eslint/parser": "5.23.0",
+        "prettier": "2.6.2",
+        "prettier-plugin-tailwindcss": "0.1.10",
+        "postcss": "8.4.13",
+        "autoprefixer": "10.4.7",
+        "tailwindcss": "3.0.24",
+        "typescript": "4.6.4"
     }
 }
