--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
         "react-router-dom": "6.3.0",
         "@mantine/core": "4.2.4",
         "@mantine/hooks": "4.2.4",
+        "@mantine/dates": "4.2.4",
         "@mantine/notifications": "4.2.4",
         "@heroicons/react": "1.0.6",
         "swr": "1.3.0",
-        "qs": "6.10.3"
+        "qs": "6.10.3",
+        "dayjs": "1.11.2"
     },
     "devDependencies": {
         "vite": "2.9.9",
