--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
         "react-dom": "18.1.0",
         "react-hook-form": "7.31.1",
         "react-router-dom": "6.3.0",
-        "@mantine/core": "4.2.4",
-        "@mantine/hooks": "4.2.4",
-        "@mantine/dates": "4.2.4",
-        "@mantine/notifications": "4.2.4",
+        "@mantine/core": "4.2.5",
+        "@mantine/hooks": "4.2.5",
+        "@mantine/dates": "4.2.5",
+        "@mantine/notifications": "4.2.5",
         "@heroicons/react": "1.0.6",
+        "axios": "0.27.2",
         "swr": "1.3.0",
-        "qs": "6.10.3",
         "dayjs": "1.11.2"
     },
     "devDependencies": {
@@ -33,7 +33,6 @@
         "vite-tsconfig-paths": "3.4.1",
         "@types/react": "18.0.9",
         "@types/react-dom": "18.0.4",
-        "@types/qs": "6.9.7",
         "eslint": "8.15.0",
         "eslint-plugin-react": "7.29.4",
         "eslint-plugin-jsx-a11y": "6.5.1",
@@ -42,7 +41,7 @@
         "@typescript-eslint/eslint-plugin": "5.23.0",
         "@typescript-eslint/parser": "5.23.0",
         "prettier": "2.6.2",
-        "prettier-plugin-tailwindcss": "0.1.10",
+        "prettier-plugin-tailwindcss": "0.1.11",
         "postcss": "8.4.13",
         "autoprefixer": "10.4.7",
         "tailwindcss": "3.0.24",
