--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
         "useDefineForClassFields": true,
         "lib": ["DOM", "DOM.Iterable", "ESNext"],
         "allowJs": false,
-        "skipLibCheck": false,
+        "skipLibCheck": true,
         "esModuleInterop": false,
         "allowSyntheticDefaultImports": true,
         "strict": true,
@@ -16,7 +16,7 @@
         "noEmit": true,
         "jsx": "react-jsx",
         "baseUrl": "./src",
-        "paths": {"@contexts/*": ["contexts/*"], "@components/*": ["components/*"], "@lib/*": ["lib/*"] }
+        "paths": { "@contexts/*": ["contexts/*"], "@components/*": ["components/*"], "@lib/*": ["lib/*"] }
     },
     "include": ["src"],
     "references": [{ "path": "./tsconfig.node.json" }]
