--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "commessa",
-    "version": "0.3.0",
+    "version": "0.4.0",
     "description": "Commessa APP",
     "author": {
         "name": "Valerio Fornito",
@@ -22,12 +22,14 @@
         "@mantine/hooks": "4.2.6",
         "@mantine/dates": "4.2.6",
         "@mantine/notifications": "4.2.6",
-        "@heroicons/react": "1.0.6",
         "axios": "0.27.2",
         "swr": "1.3.0",
-        "dayjs": "1.11.2"
+        "dayjs": "1.11.2",
+        "html2canvas": "1.4.1",
+        "jspdf": "2.5.1"
     },
     "devDependencies": {
+        "@heroicons/react": "1.0.6",
         "vite": "2.9.9",
         "@vitejs/plugin-react": "1.3.2",
         "vite-tsconfig-paths": "3.4.1",
@@ -40,6 +42,6 @@
         "eslint-plugin-import": "2.26.0",
         "@typescript-eslint/eslint-plugin": "5.26.0",
         "@typescript-eslint/parser": "5.26.0",
-        "typescript": "4.6.4"
+        "typescript": "4.7.2"
     }
 }
