--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "commessa",
-    "version": "0.6.0",
+    "version": "0.6.1",
     "description": "Commessa APP",
     "author": {
         "name": "Valerio Fornito",
@@ -14,34 +14,34 @@
         "lint": "tsc --noEmit && eslint 'src/**/*.{js,ts,tsx}' --quiet"
     },
     "dependencies": {
+        "@mantine/core": "4.2.9",
+        "@mantine/dates": "4.2.9",
+        "@mantine/hooks": "4.2.9",
+        "@mantine/notifications": "4.2.9",
+        "axios": "0.27.2",
+        "dayjs": "1.11.3",
+        "html2canvas": "1.4.1",
+        "jspdf": "2.5.1",
         "react": "18.1.0",
         "react-dom": "18.1.0",
-        "react-hook-form": "7.31.3",
+        "react-hook-form": "7.32.1",
         "react-router-dom": "6.3.0",
-        "@mantine/core": "4.2.7",
-        "@mantine/hooks": "4.2.7",
-        "@mantine/dates": "4.2.7",
-        "@mantine/notifications": "4.2.7",
-        "axios": "0.27.2",
-        "swr": "1.3.0",
-        "dayjs": "1.11.2",
-        "html2canvas": "1.4.1",
-        "jspdf": "2.5.1"
+        "swr": "1.3.0"
     },
     "devDependencies": {
         "@heroicons/react": "1.0.6",
-        "vite": "2.9.9",
-        "@vitejs/plugin-react": "1.3.2",
-        "vite-tsconfig-paths": "3.5.0",
-        "@types/react": "18.0.9",
+        "@types/react": "18.0.12",
         "@types/react-dom": "18.0.5",
-        "eslint": "8.16.0",
-        "eslint-plugin-react": "7.30.0",
-        "eslint-plugin-jsx-a11y": "6.5.1",
-        "eslint-plugin-react-hooks": "4.5.0",
+        "@typescript-eslint/eslint-plugin": "5.28.0",
+        "@typescript-eslint/parser": "5.28.0",
+        "@vitejs/plugin-react": "1.3.2",
+        "eslint": "8.17.0",
         "eslint-plugin-import": "2.26.0",
-        "@typescript-eslint/eslint-plugin": "5.27.0",
-        "@typescript-eslint/parser": "5.27.0",
-        "typescript": "4.7.2"
+        "eslint-plugin-jsx-a11y": "6.5.1",
+        "eslint-plugin-react": "7.30.0",
+        "eslint-plugin-react-hooks": "4.5.0",
+        "typescript": "4.7.3",
+        "vite": "2.9.12",
+        "vite-tsconfig-paths": "3.5.0"
     }
 }
